Issue #341 style: Geniecontrol alignment fix

--- a/app/styles/sass/ceNewHeader.sass
+++ b/app/styles/sass/ceNewHeader.sass
@@ -233,7 +233,7 @@ body
 			.ui.dropdown
 				box-shadow: none
 				.menu
-					left: -105px
+					left: -85px!important
 					top: 70%
 					.item
 
