--- a/app/styles/sass/ceNewMainContainer.sass
+++ b/app/styles/sass/ceNewMainContainer.sass
@@ -72,7 +72,7 @@ $slidesContainerWidth:	11%
 		background-size: cover
 		position: absolute
 		top: 1rem
-		left: 1rem
+		left: 0rem
 		width: 720px
 		height: 405px
 
